[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = "A simple Rock paper scissors game in Python"
authors = ["Advait Jadhav"]

[tool.poetry.dependencies]
python = "^3.9"
PyInquirer = "^1.0.3"
rich = "^10.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
